--- a/main.html
+++ b/main.html
@@ -11,6 +11,19 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<ol>
+        <li data-ns-test="shoppingList">ItemOne</li>
+        <li data-ns-test="shoppingList">ItemTwo</li>
+        <li data-ns-test="shoppingList">ItemThree</li>
+    </ol>
+
+	<ul>
+        <li data-ns-test="holidayList">PlaceOne</li>
+        <li data-ns-test="holidayList">PlaceTwo</li>
+        <li data-ns-test="holidayList">PlaceThree</li>
+        <li data-ns-test="holidayList">PlaceFour</li>
+    </ul>
+
 </body>
 
 </html>
